--- a/main.html
+++ b/main.html
@@ -4,9 +4,83 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		
+			body{
+			
+				background-color:#f5f5f5;
+			}
+		.header{
+			height:100px;
+			background-color:#011e29;
+			color:white;
+			display:flex;
+			justify-content:center;
+			
+			
+		}
+		#hero{
+			display:flex;
+			justify-content:center;
+			
+			
+		}
+
+		.pictorial-news-section{
+			width:20%;
+			background-color:white;
+			border-radius:10px;
+			padding-inline:10;px;
+			text-align:center;
+		}
+		.main{
+			width:50%;
+			background-color:white;
+			border-radius:10px;
+			padding-inline:10;px;
+			margin-inline:5px;
+			text-align:center;
+		}
+		.latest-news-section{
+			width:20%;
+			background-color:white;
+			border-radius:10px;
+			padding-inline:10;px;
+			text-align:center;
+		}
+	
+	</style>
 </head>
 
 <body>
+	
+	<header class="header">
+		<h1>Shaws's News</h1>
+	</header>
+	<div id="hero" >
+		<div class="latest-news-section">
+			<h3>
+				Latest News Articles
+			</h3>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class="main">
+			<h2>Main Article</h2>
+			<p>Style the header with the class .header and ensure it has center alignment, padding, and the provided background color.
+		           For the "Latest News" section, use a divthe class .pictorial-news-section</p>
+		</div>
+		<div class="pictorial-news-section">
+			<h2>Pictorial News</h2>
+			<img src="">
+			<img src="">
+			<img src="">
+		</div>
+	</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
