--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 			height:100px;
 			background-color:#011e29;
 			color:white;
-			display:flex;
-			justify-content:center;
+			
+			text-align:center;
 			
 			
 		}
@@ -75,6 +75,7 @@
 		</div>
 		<div class="pictorial-news-section">
 			<h2>Pictorial News</h2>
+			<div></div>
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
